# poe2_parser_price_modifier

./: .gitignore  README.md  category.py  explicit.txt  items.json  parser_expensive_rolls_jewels.py  parser_expensive_rolls_jewels_oldversion_v2.py  parser_expensive_rolls_jewels_v3.py  pyproject.toml  stats.json
reports/: poe2_emerald_rare_12hours_meta_pipeline_20260211_183439.xlsx  poe2_emerald_rare_12hours_meta_pipeline_20260211_183619.xlsx  poe2_emerald_rare_12hours_meta_pipeline_20260211_184357.xlsx  poe2_emerald_rare_12hours_meta_pipeline_20260211_184448.xlsx  poe2_emerald_rare_12hours_meta_pipeline_20260211_195131.xlsx  poe2_emerald_rare_12hours_meta_pipeline_20260211_195610.xlsx  poe2_emerald_rare_12hours_meta_pipeline_20260211_202441.xlsx  poe2_emerald_rare_12hours_meta_pipeline_20260211_210540.xlsx
src/poe2_price_modifier/: __init__.py  cli.py  config.py  debug_cli.py  pipeline.py  utils.py
src/poe2_price_modifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_pipeline_utils.py
