[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poe2-price-modifier"
version = "0.1.0"
description = "Professional CLI tool for analyzing expensive Path of Exile jewel modifiers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "pandas>=2.0.0",
  "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
poe2-price-modifier = "poe2_price_modifier.cli:main"
poe2-price-modifier-debug = "poe2_price_modifier.debug_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
